Fixed the styling on a few things, the header now wraps text properly when displaying a message and the buttons are just tied to a css class now. I also made the logout button delete all login data from state.

--- a/frontend/QrCool/src/index.css
+++ b/frontend/QrCool/src/index.css
@@ -34,4 +34,12 @@ body{
   .text-slider-visible{
     @apply blur-none opacity-100 transform -translate-x-20;
   }
+
+  .icon{
+    @apply text-3xl lg:text-2xl;
+  }
+
+  .icon-blue-hover{
+    @apply nice-trans hover:text-blue-500;
+  }
 }
